--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <h1>Edward Peguero Art Portfolio </h1>
     <p>How to contact me</p>
     <ul>
-      <li><a href="alterego.html">Here is a link to my Alter Ego Potrait</a></li>
-      <li><a href="colorstudy.html">Here is a link to my Color Study</a></li>
-      <li><a href="Pattern.html">Here is a link to my Pattern</a></li>
+      <li><a href="Photoshopart.html">Photoshop art</a></li>
+      <li><a href="colorstudy.html">Photography</a></li>
+      <li><a href="Howtogetintouch.html">How to get in touch</a></li>
       <li><a href="myfilm.html">Here is a link to my film with after effects</a></li>
       </body>
 </html>
