--- a/Photoshopart.html
+++ b/Photoshopart.html
@@ -1,1 +1,5 @@
-
+<h1>Thank you for visiting my page</h1>
+<img src="Workstuff.jpg">
+<p>VCR Dream</p>
+<img src="Landscape.jpg">
+<p>in your hands</p>
