--- a/Photoshopart.html
+++ b/Photoshopart.html
@@ -1,5 +1,5 @@
 <h1>Thank you for visiting my page</h1>
-<img src="Work stuff.png">
+<img src="Work stuff.png height="400">
 <p>VCR Dream</p>
-<img src="Landscape.jpg">
+<img src="Landscape.jpg height="400">
 <p>in your hands</p>
