--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <p>Edward Peguero</p>
   <body>
   <h1>Edward Peguero Art Portfolio </h1>
-    <p>How to contact me</p>
+    <p>Hello! Thank you for coming to my art page</p>
     <ul>
       <li><a href="Photoshopart.html">Photoshop art</a></li>
       <li><a href="colorstudy.html">Photography</a></li>
