--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-  <h1>Edward Peguero Art Portfolio </h1>
+    <h1> <Center>Edward Peguero Art Portfolio </center> </h1>
     <p>Hello! Thank you for coming to my art page</p>
     <ul>
       <li><a href="Photoshopart.html">Photoshop art</a></li>
