--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <h1> <Center>Edward Peguero Art Portfolio </center> </h1>
-    <p>Hello! Thank you for coming to my art page</p>
+    <p> <Center> Hello! Thank you for coming to my art page </Center></p>
     <ul>
       <li><a href="Photoshopart.html">Photoshop art</a></li>
       <li><a href="colorstudy.html">Photography</a></li>
