--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline;
+}
+</head>
+</style>
   <body>
     <h1> <Center>Edward Peguero Art Portfolio </center> </h1>
     <p> <Center> Hello! Thank you for coming to my art page </Center></p>
