--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@ ul {
   margin: 0;
   padding: 0
   overflow: hidden;
-  background-color: #dddddd;
+  background-color: #333;
 }
 
-li {
-  display: inline;
-  float: center;
+li a {
+  display: Block;
+  Color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+
 }
+li a:hover:not(.active) {
+  background-color: #111;
+  }
+.active {
+  background-color: #04AA6D;
+  }
+
 </head>
 </style>
   <body>
