--- a/Photoshopart.html
+++ b/Photoshopart.html
@@ -1,5 +1,26 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+.flex-container {
+  display: flex;
+  background-color: DodgerBlue;
+}
+
+.flex-container > div {
+  background-color: #f1f1f1;
+  margin: 10px;
+  padding: 20px;
+  font-size: 30px;
+}
+</style>
+</head>
+<body
+
 <h1>Thank you for visiting my page</h1>
-<img src="Work stuff.png">
+<div class="flex-container">
+  <div><img src="Work stuff.png"></div>
 <p>VCR Dream</p>
-<img src="Landscape.jpg">
+  <div><img src="Landscape.jpg"></div> 
 <p>in your hands</p>
+</div>
