--- a/Photoshopart.html
+++ b/Photoshopart.html
@@ -5,7 +5,7 @@
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  background-color: DodgerBlue;
+  background-color: lavender;
 }
 
 .flex-container > div {
