--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@ li a:hover:not(.active) {
   background-color: #04AA6D;
   }
 
+.center {
+  margin: auto;
+  width: 60%;
+  border: 3px solid #73AD21;
+  padding: 10px;
+
 </head>
 </style>
   <body>
