--- a/Photography.html
+++ b/Photography.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: lavender;
+}
 
+.flex-container > div {
+  background-color: #f1f1f1;
+  margin: 10px;
+  padding: 20px;
+  font-size: 30px;
+}
+</style>
+</head>
+<body
+
+<h1>Thank you for visiting my page</h1>
+<div class="flex-container">
+  <div><img src="Jamesanddrew.png"></div>
+<p>VCR Dream</p>
+  <div><img src="Citgo.jpg"></div> 
+<p>in your hands</p>
+</div>
