--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ li a:hover:not(.active) {
     <p> <Center> Hello! Thank you for coming to my art page </Center></p>
     <ul>
       <li><a href="Photoshopart.html">Photoshop art</a></li>
-      <li><a href="colorstudy.html">Photography</a></li>
+      <li><a href="Photography.html">Photography</a></li>
       <li><a href="Howtogetintouch.html">How to get in touch</a></li>
       </body>
 </html>
