--- a/Photography.html
+++ b/Photography.html
@@ -20,7 +20,7 @@
 
 <h1>Thank you for visiting my page</h1>
 <div class="flex-container">
-  <div><img src="Jamesanddrew.png"></div>
+  <div><img src="Jamesanddrew.png" width="500" height="600"></div>
 <p>VCR Dream</p>
   <div><img src="Citgo.JPG"></div> 
 <p>in your hands</p>
