--- a/Photography.html
+++ b/Photography.html
@@ -22,6 +22,6 @@
 <div class="flex-container">
   <div><img src="Jamesanddrew.png" width="500" height="600"></div>
 <p>VCR Dream</p>
-  <div><img src="Citgo.JPG"></div> 
+  <div><img src="Citgo.JPG" width="500" height="600"></div> 
 <p>in your hands</p>
 </div>
