--- a/Photography.html
+++ b/Photography.html
@@ -21,7 +21,6 @@
 <h1>Thank you for visiting my page</h1>
 <div class="flex-container">
   <div><img src="Jamesanddrew.png" width="600" height="600"></div>
-<p>VCR Dream</p>
   <div><img src="Citgo.JPG" width="600" height="600"></div> 
-<p>in your hands</p>
+ <div><img src="Ed.JPG" width="600" height="600"></div> 
 </div>
