--- a/Photography.html
+++ b/Photography.html
@@ -22,5 +22,5 @@
 <div class="flex-container">
   <div><img src="Jamesanddrew.png" width="600" height="600"></div>
   <div><img src="Citgo.JPG" width="600" height="600"></div> 
- <div><img src="Ed.JPG" width="600" height="600"></div> 
+ <div><img src="Ed.jpg" width="600" height="600"></div> 
 </div>
