--- a/Photography.html
+++ b/Photography.html
@@ -5,7 +5,7 @@
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  background-color: Off-Black;
+  background-color:#313639;
 }
 
 .flex-container > div {
