--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@ li a:hover:not(.active) {
     <ul>
       <li><a href="Photoshopart.html">Photoshop art</a></li>
       <li><a href="Photography.html">Photography</a></li>
-      <li><a href="Howtogetintouch.html">How to get in touch</a></li>
+      <li><a href="Contact.html">How to get in touch</a></li>
       </body>
 </html>
