--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,6 @@
 
 <textarea name=”message”></textarea>
 
-<input type=”submit” value=”Submit” <button type="button">Submit</button> >
+ <button type="button">Submit</button> 
 
 </form>
