--- a/Contact.html
+++ b/Contact.html
@@ -6,4 +6,15 @@
 
  <button type="button">Submit</button> 
 
+<button onclick="myFunction()">Submitted</button>
+
+<p id="demo"></p>
+
+<script>
+function myFunction() {
+  document.getElementById("demo").innerHTML = "Hello World";
+}
+</script>
+
+
 </form>
