--- a/Contact.html
+++ b/Contact.html
@@ -4,15 +4,13 @@
 
 <textarea name=”message”></textarea>
 
- <button type="button">Submit</button> 
-
-<button onclick="myFunction()">Submitted</button>
+<button onclick="myFunction()">Submit</button>
 
 <p id="demo"></p>
 
 <script>
 function myFunction() {
-  document.getElementById("demo").innerHTML = "Hello World";
+  document.getElementById("demo").innerHTML = "E-mail sent";
 }
 </script>
 
