--- a/Photography.html
+++ b/Photography.html
@@ -24,3 +24,6 @@
   <div><img src="Citgo.JPG" width="600" height="600"></div> 
  <div><img src="Ed.jpg" width="600" height="600"></div> 
 </div>
+<form>
+ <input type="button" value="Go back!" onclick="history.back()">
+</form>
