--- a/Photoshopart.html
+++ b/Photoshopart.html
@@ -25,3 +25,6 @@
   <div><img src="Landscape.jpg"></div> 
 <p>in your hands</p>
 </div>
+<form>
+ <input type="button" value="Go back!" onclick="history.back()">
+</form>
