--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,13 @@
 function myFunction() {
   document.getElementById("demo").innerHTML = "E-mail sent";
 }
+
+ <input type="button" value="Go back!" onclick="history.back()">
+
 </script>
 
 
 </form>
+
+
+
