--- a/Contact.html
+++ b/Contact.html
@@ -13,12 +13,14 @@ function myFunction() {
   document.getElementById("demo").innerHTML = "E-mail sent";
 }
 
- <input type="button" value="Go back!" onclick="history.back()">
 
 </script>
 
 
 </form>
 
+<form>
+ <input type="button" value="No, really, go back!" onclick="history.go(-1)">
+</form>
 
 
