--- a/Photoshopart.html
+++ b/Photoshopart.html
@@ -5,12 +5,12 @@
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  background-color: lavender;
+  background-color: #313639;
 }
 
 .flex-container > div {
   background-color: #f1f1f1;
-  margin: 10px;
+  margin: 100px;
   padding: 20px;
   font-size: 30px;
 }
