--- a/Photoshopart.html
+++ b/Photoshopart.html
@@ -21,9 +21,9 @@
 <h1>Thank you for visiting my page</h1>
 <div class="flex-container">
   <div><img src="Work stuff.png"></div>
-<p>VCR Dream</p>
+<p>"VCR Dream"</p>
   <div><img src="Landscape.jpg"></div> 
-<p>in your hands</p>
+<p>"In your hands"</p>
 </div>
 <form>
  <input type="button" value="Go back!" onclick="history.back()">
