--- a/Photoshopart.html
+++ b/Photoshopart.html
@@ -20,9 +20,9 @@
 
 <h1>Thank you for visiting my page</h1>
 <div class="flex-container">
-  <div><img src="Work stuff.png"></div>
+  <div><img src="Work stuff.png" width="600" height="600"></div>
 <p>"VCR Dream"</p>
-  <div><img src="Landscape.jpg"></div> 
+  <div><img src="Landscape.jpg" width="600" height="600"></div> 
 <p>"In your hands"</p>
 </div>
 <form>
