--- a/Photoshopart.html
+++ b/Photoshopart.html
@@ -15,8 +15,8 @@
   font-size: 30px;
 }
 
-h1 {text-align: center;}
-p {text-align: center;}
+h1 {text-align: left;}
+p {text-align: left;}
 
 </style>
 </head>
